gcc/testsuite/rust/rustc/ui/parser/removed-syntax-with-1.rs
fn main() {
    struct S {
        foo: (),
        bar: (),
    }

    let a = S { foo: (), bar: () };
    let b = S { foo: () with a, bar: () };
// { dg-error "" "" { target *-*-* } .-1 }
}

